--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         background-color: #2a0a0a;
         background-image: 
           radial-gradient(circle at 50% 50%, #4a0404 0%, #1a0000 100%);
-        overflow: hidden; /* Prevent native scroll, we handle it internally */
+        /* Removed overflow: hidden to allow scrolling on mobile */
       }
 
       /* Casino Felt Texture */
@@ -334,7 +334,8 @@
 </script>
 <link rel="stylesheet" href="/index.css">
 </head>
-  <body class="text-white overflow-hidden h-screen w-screen bg-black">
+  <!-- Removed overflow-hidden class to allow scrolling on mobile devices -->
+  <body class="text-white h-screen w-screen bg-black">
     <div id="root" class="h-full w-full"></div>
   <script type="module" src="/index.tsx"></script>
 </body>
